# data-analist-privacy-first-mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ETHICS.md  INSTALL.md  PRESENTATION.md  gerar_diagrama.py
src/agente_dados_mcp/: __init__.py  describe.py  executor.py  kanon.py  loader.py  pii.py  prompts.py  quality.py  renderer.py  schema.py  server.py  state.py  theme.py  validator.py
tests/: test_adversarial.py  test_describe.py  test_executor.py  test_kanon.py  test_loader.py  test_pii.py  test_quality.py  test_schema.py  test_smoke_end_to_end.py  test_validator.py
