[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agente-dados-mcp"
version = "0.1.0"
description = "MCP server privacy-first para análise exploratória de CSV local — código vai pro dado, dado nunca vai pro LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Equipe AulaTerça" },
]
keywords = ["mcp", "data-analysis", "privacy", "csv", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "plotly>=5.18",
    "kaleido>=0.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "mypy",
]

[project.scripts]
agente-dados-mcp = "agente_dados_mcp.server:main"

[project.urls]
Homepage = "https://github.com/aulaterca/agente-dados-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/agente_dados_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
